update Library